--- a/alumni/templates/alumni/bio_list.html
+++ b/alumni/templates/alumni/bio_list.html
@@ -1,4 +1,4 @@
-{% extends "bios/bio_base.html" %} {% load humanize %} {% load bootstrap %} {% load static %} {% block navcontent %}
+{% extends "bios/bio_base.html" %} {% load humanize %} {% load bootstrap %} {% load static %} {% block title %} Know Your Alumni | Cepstrum {% endblock title %} {% block navcontent %}
 <h1><b>Know Ur Alumni</b> </h1>
 <br>
 <p>
