--- a/bios/templates/bios/bio_list.html
+++ b/bios/templates/bios/bio_list.html
@@ -1,4 +1,4 @@
-{% extends "bios/bio_base.html" %} {% load static %} {% load humanize %} {% load bootstrap %} {% block navcontent %}
+{% extends "bios/bio_base.html" %} {% load static %} {% load humanize %} {% load bootstrap %}{% block title %} Know Your Seniors | Cepstrum {% endblock title %} {% block navcontent %}
 <h1><b>Know Ur Seniors</b> </h1>
 <br>
 <p>
