--- a/alumni/templates/alumni/bio_base.html
+++ b/alumni/templates/alumni/bio_base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block css %}
+{% extends "base.html" %} {% load static %} {% block title %} Know Your Alumni | Cepstrum {% endblock title %} {% block css %}
 <style>
     .carousel-item {
         height: 100vh;
