--- a/bios/templates/bios/bio_delete.html
+++ b/bios/templates/bios/bio_delete.html
@@ -1,15 +1,13 @@
-{% extends "bios/bio_base.html" %}
-{% load bootstrap %}
-{% block prepost %}
+{% extends "bios/bio_base.html" %} {% load bootstrap %} {% block title %} Know Your Seniors | Cepstrum {% endblock title %} {% block prepost %}
 <div class="">
-  <br><br><br><br><br>
+    <br><br><br><br><br>
 </div>
 <form class="container" method="POST">
-{% csrf_token %}
-<h1>Do You Want to delete You Profile from the database?</h1>
-<input type="submit" name="" class="btn btn-outline-warning" value="Delete">
+    {% csrf_token %}
+    <h1>Do You Want to delete You Profile from the database?</h1>
+    <input type="submit" name="" class="btn btn-outline-warning" value="Delete">
 </form>
 <div class="">
-  <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
 </div>
 {% endblock %}
