--- a/bios/templates/bios/bio_detail.html
+++ b/bios/templates/bios/bio_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block css %}
+{% extends "base.html" %} {% load static %} {% block title %} {{object.name}} | Cepstrum {% endblock title %} {% block css %}
 <link rel="stylesheet" href="{% static 'KYS/css/detail.css' %}"> {% endblock %} {% block content %}<br><br><br><br><br>
 <div class="main-container">
     <!-- HEADER -->
