--- a/alumni/templates/alumni/bio_base.html
+++ b/alumni/templates/alumni/bio_base.html
@@ -66,7 +66,7 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active" style="background-image:
-        url('{% block navimg %}https://live.staticflickr.com/7415/11546057593_1f49a71617_b.jpg{% endblock navimg %}'); opacity: 0.8;">
+        url('{% block navimg %}https://live.staticflickr.com/7415/11546057593_1f49a71617_b.jpg{% endblock navimg %}');">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
 
