--- a/alumni/templates/alumni/bio_list.html
+++ b/alumni/templates/alumni/bio_list.html
@@ -1,41 +1,41 @@
-{% extends "bios/bio_base.html" %} {% load humanize %} {% load bootstrap %} {% load static %} {% block title %} Know Your Alumni | Cepstrum {% endblock title %} {% block navcontent %}
+{% extends "alumni/bio_base.html" %} {% load humanize %} {% load bootstrap %} {% load static %} {% block title %} Know Your Alumni | Cepstrum {% endblock title %} {% block navcontent %}
 <h1><b>Know Ur Alumni</b> </h1>
 <br>
 <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem alias neque distinctio sapiente magni beatae pariatur. Placeat veritatis consequuntur ab odit ullam ut nobis repellat eius omnis aut! Aperiam, placeat!
 </p>
-<center>
-
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-		Filter
-	  </button>
-</center>
-{% endblock navcontent %} {% block prepost %} {% if user.is_authenticated %}
 
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Filter
+  </button>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: black;">
-    <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Filters</h5>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <h5 class="modal-title" id="exampleModalLabel">Filter</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form method="GET" class="">
                     {{filter.form|bootstrap}}
-                    <button type="submit" class="btn btn-primary">Search</button>
-                    <a href="{% url 'bios:all' %}" class="btn btn-secondary">Clear</a>
-
                 </form>
             </div>
             <div class="modal-footer">
-
+                <a href="{% url 'bios:all' %}" class="btn btn-secondary">Clear</a>
+                <button type="submit" class="btn btn-primary">Search</button>
             </div>
         </div>
     </div>
 </div>
+
+{% endblock navcontent %} {% block prepost %} {% if user.is_authenticated %}
+
+
+
 <br><br>
 <div id="main">
     {% if bio_list %}
