--- a/bios/templates/bios/bio_base.html
+++ b/bios/templates/bios/bio_base.html
@@ -52,13 +52,7 @@
     }
 </style>
 
-{% endblock %} {% block carousel %} {% if user.is_authenticated %}
-<!-- <br><br>
-<div class="alert alert-success" style="padding-left: 40%;" role="alert">
-  WELCOME {{user.first_name}},<br>
-  You are now Logged in
-</div>
-{% endif %} -->
+{% endblock %} {% block carousel %}
 <div id="carouselExampleIndicators" class="carousel slide my-carousel
     my-carousel" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -86,12 +80,7 @@
 
 
 
-        <!-- <div class="carousel-item" data-interval="9000">
-      <video autoplay muted loop width="100%" height="130%" id="myVideo">
-        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
-      </video>
 
-    </div> -->
 
     </div>
 
