--- a/inplace/templates/inplace/inplace_detail.html
+++ b/inplace/templates/inplace/inplace_detail.html
@@ -24,16 +24,20 @@
  
    text-align: justify;
         width: 75%;
-        font-size: 24px;
+        font-size: 2vh;
     }
     .carousel-item-screen {
         color: white;
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
-        height: 100%;
-        padding: 15% 0% 0 0%;
+        height: 100%;align-items:center;
         display: flex;
         justify-content: center;
+    }
+    @media  screen and (max-width:1000px) {
+       .carousel-item{
+        height: 92.4vh;
+       }
     }
     .link-button {
         color: white;
